# personal-projects

./: README.md
My_Simple_Shell/: .msshrc_history  CMAKE PREVIOUS BUILD PATH  CMakeLists.txt  Makefile  Makefile (copy)  TESTout.txt  cscd340hw8  cscd340hw8.c  men  mssh  msshmain.c  out.txt  out3.txt  things
My_Simple_Shell/Debug/: .msshrc_history  Lab8  out2.txt
My_Simple_Shell/Debug/Stash/: .msshrc  .msshrc_history
My_Simple_Shell/Debug/Stash/Stasharoo/: .msshrc
My_Simple_Shell/alias/: alias.c  alias.h
My_Simple_Shell/history/: history.c  history.h
My_Simple_Shell/linkedlist/: genericData.h  linkedList.c  linkedList.h  listUtils.c  listUtils.h  requiredIncludes.h
My_Simple_Shell/pipes/: pipes.c  pipes.h
My_Simple_Shell/process/: process.c  process.h
My_Simple_Shell/shell/: shell.c  shell.h
My_Simple_Shell/string_edit/: string_edit.h
My_Simple_Shell/tokenize/: makeArgs.c  makeArgs.h
